--- a/custom_components/icloud3/translations/en.json
+++ b/custom_components/icloud3/translations/en.json
@@ -82,6 +82,9 @@
       "icloud_acct_login_error_user_pw": "❌ Could not log into the Apple Account, Invalid Username or Password",
       "icloud_acct_login_error_other": "❌ Login Error, Other Error or iCloud is not Available",
       "icloud_acct_login_error_503": "🍎 Apple is delaying displaying a new Verification code to prevent Suspicious Activity, probably due to too many requests. It should be displayed in about 20-30 minutes. Restart HA if it is not displayed",
+      "icloud_acct_login_error_302": "❌ Login Failed, Apple server refused connection (Error 302)",
+      "icloud_acct_login_error_302_cn": "❌ Login Failed, Apple server refused connection. CHINA was disabled but Apple server country-code = CHN (Error 302)",
+      "icloud_acct_login_error_302_xcn": "❌ Login Failed, Apple server refused connection. CHINA was enabled but Apple server country-code is not CHN (Error 302)",
       "icloud_acct_login_error_srp_401": "❌ Python SRP Library Credentials Error. The Python module that creates the Secure Remote Password hash key has calculated an incorrect value for a valid Username/Password. Try changing the Password to see if the Apple Acct can be logged into.",
       "icloud_acct_dup_username_error": "Error: Username is being used by another Data Source entry",
       "icloud_acct_username_inuse_error": "Error: This Username is being used by another Data Source entry. This one cannot be changed to it until the other one is removed. Select the other one and STOP USING it first.",
@@ -236,12 +239,12 @@
           "username": "USERNAME - Email address/username used to sign in to the Apple Account",
           "password": "PASSWORD - Account Password",
           "totp_key": "TOTP KEY - Time Based One-Time Password Key used to generate the 6-digit authentication code",
-          "locate_all": "ALWAYS LOCATE ALL DEVICES - Locate all the devices in the Apple Account, including those in the Family list. Unchecked will only locate the Family list devices when they are being updated (default)",
-          "url_suffix_china": "CHINA USERS - Use Apple iCloud Web Servers located in China (.cn URL suffix)",
+          "locate_all": "ALWAYS LOCATE ALL DEVICES - Only applies with multiple Apple Accounts -- Enabled=Locate all the devices in the Apple Acct (Owners and Family Devices). Disabled=Only locate the Apple Acct owners devices",
+          "url_suffix_china": "CHINA USERS - Use Apple iCloud Servers located in China (.cn URL suffix)",
           "action_items": "⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯ ACTION COMMANDS"
         },
         "data_description": {
-          "locate_all": "Devices fall into two categories, your devices and  everything else. Locating all devices will get their location with fewer internet calls that might take slightly longer while Apple locates them, especially if you have a lot of devices. Not doing this results in more internet calls that are faster."
+          "locate_all": "Devices fall into two categories, devices belonging to the Apple acct owner and devices in the Family Sharing list. Locating the owners devices = More internet calls, reduces response time; Locating all devices = fewer internet calls, slightly longer response time."
         }
       },
       "delete_apple_acct": {
