--- a/custom_components/icloud3/translations/en.json
+++ b/custom_components/icloud3/translations/en.json
@@ -3,7 +3,7 @@
   "config": {
     "abort": {
       "config_update_complete": "iCloud3 configuration updated successfully",
-      "already_configured": "iCloud3 is already installed and can not be installed again. Select CONFIGURE in the iCloud3 Integration entry to configure iCloud3.\n\nIf you are deleting and then reinstalling, restart HA first and then reinstall iCloud3",
+      "already_configured": "iCloud3 is already installed and can not be installed again. \n\nTo configure iCloud3, select the Gear icon (⚙️) or CONFIGURE on the iCloud3 Integration Entries line.\n\nIf you are deleting and then reinstalling, restart HA first and then reinstall iCloud3",
       "disabled": "iCloud3 is DISABLED and can not be installed again. Enable iCloud3, then select CONFIGURE in the iCloud3 Integration entry to configure iCloud3.\n\nIf you are deleting and then reinstalling, restart HA first and then reinstall iCloud3",
       "login_error": "An error occurred logging into the Apple Account. Verify the username and password.",
       "reauth_successful": "The reauthentication has been successfully completed",
@@ -76,30 +76,32 @@
     },
     "error": {
       "unknown_action": "Selected Action could not be identified",
+      "action_not_available": "Internet Connection Error > Action not Available",
       "not_available": "This Action is not available at this time",
       "update_aborted": "Update aborted, an error was detected in one of the data fields",
       "conf_updated": "✅ iCloud3 Configuration Parameters were updated successfully",
       "conf_reloaded": "iCloud3 Configuration File was Reloaded",
-      "icloud_acct_logging_into": "Logging into Apple Account",
-      "icloud_acct_logged_into": "✅ Logged into the Apple Account",
-      "icloud_acct_already_logged_into": "Already Logged into the Apple Account",
-      "icloud_acct_locate_all_reqd": "All devices must be located. Other Family devices are tracked with this Apple Account",
-      "icloud_acct_login_error_user_pw": "❌ Could not log into the Apple Account, Invalid Username or Password",
-      "icloud_acct_login_error_other": "❌ Login Error, Other Error or iCloud is not Available",
-      "icloud_acct_login_error_503": "🍎 Apple is delaying displaying a new Verification code to prevent Suspicious Activity, probably due to too many requests. It should be displayed in about 20-30 minutes. Restart HA if it is not displayed",
-      "icloud_acct_login_error_302": "❌ Login Failed, Apple server refused connection (Error 302)",
-      "icloud_acct_login_error_302_cn": "Apple Acct Server may be China but CHINA was not selected",
-      "icloud_acct_login_error_302_usa": "China was selected but Apple Server Location may be USA",
-      "icloud_acct_login_error_srp_401": "❌ Python SRP Library Credentials Error. The Python module that creates the Secure Remote Password hash key has calculated an incorrect value for a valid Username/Password. Try changing the Password to see if the Apple Acct can be logged into.",
-      "icloud_acct_dup_username_error": "Error: Username is being used by another Data Source entry",
-      "icloud_acct_username_inuse_error": "Error: This Username is being used by another Data Source entry. This one cannot be changed to it until the other one is removed. Select the other one and STOP USING it first.",
-      "icloud_acct_not_available": "❌ Login Failed, Apple Account is not Available",
-      "icloud_acct_not_logged_into": "The Apple Account(s) are not logged into",
-      "icloud_acct_updated_not_logged_into": "Apple Acct info was saved, Login Error, Will Complete Login Later",
-      "icloud_acct_data_source_warning": "Warning: Apple Accts have been set up but are not used as a data source",
-      "icloud_acct_not_set_up": "No Apple Accts are set up. See `Data Sources > Apple Acct & Mobile App` screen",
-      "icloud_acct_parm_error": "Apple Account parameter error. Update it on the `Data Sources > Apple Account & Mobile App` screen",
-      "icloud_acct_no_data_source": "❌ No Data Sources have been selected (Apple Account or Mobile App)",
+      "apple_acct_logging_into": "Logging into Apple Account",
+      "apple_acct_logged_into": "✅ Logged into the Apple Account",
+      "apple_acct_already_logged_into": "Already Logged into the Apple Account",
+      "apple_acct_locate_all_reqd": "All devices must be located. Other Family devices are tracked with this Apple Account",
+      "apple_acct_login_error_user_pw": "❌ An error was encountered logging into the Apple Account",
+      "apple_acct_invalid_upw": "❌ Username or Password Validation Error",
+      "apple_acct_login_error_other": "❌ Login Error, Other Error or Apple server is not Available",
+      "apple_acct_login_error_503": "🍎 Apple is delaying displaying a new Verification code to prevent Suspicious Activity, probably due to too many requests. It should be displayed in about 20-30 minutes. Restart HA if it is not displayed",
+      "apple_acct_login_error_302": "❌ Login Failed, Apple server refused connection (Error 302)",
+      "apple_acct_login_error_302_cn": "Apple Acct Server may be China but CHINA was not selected",
+      "apple_acct_login_error_302_usa": "China was selected but Apple Server Location may be USA",
+      "apple_acct_login_error_srp_401": "❌ Python SRP Library Credentials Error. The Python module that creates the Secure Remote Password hash key has calculated an incorrect value for a valid Username/Password. Try changing the Password to see if the Apple Acct can be logged into.",
+      "apple_acct_dup_username_error": "Error: Username is being used by another Data Source entry",
+      "apple_acct_username_inuse_error": "Error: This Username is being used by another Data Source entry. This one cannot be changed to it until the other one is removed. Select the other one and STOP USING it first.",
+      "apple_acct_not_available": "❌ Login Failed, Apple Account is not Available",
+      "apple_acct_not_logged_into": "The Apple Account(s) are not logged into",
+      "apple_acct_updated_not_logged_into": "Apple Acct info was saved, Login Error, Will Complete Login Later",
+      "apple_acct_data_source_warning": "Warning: Apple Accts have been set up but are not used as a data source",
+      "apple_acct_not_set_up": "No Apple Accts are set up. See `Data Sources > Apple Acct & Mobile App` screen",
+      "apple_acct_parm_error": "Apple Account parameter error. Update it on the `Data Sources > Apple Account & Mobile App` screen",
+      "apple_acct_no_data_source": "❌ No Data Sources have been selected (Apple Account or Mobile App)",
       "ic3_icloud_same_name": "iCloud3 dev_trkr.entity_id and name on the device (Settings > General > About) can not be exactly the same (letters & case)",
       "mobile_app_error": "Error, The Mobile App Integration is not installed. The Mobile App will not be used as a data source; location data and zone enter/exit triggers will not be monitored",
       "password_asp_invalid": "Apple does not support App Specific Passwords in WebAuth applications",
@@ -137,12 +139,13 @@
       "unknown_picture": "The configured picture file was not found in `config/www/...` directories",
 
       "unknown_apple_acct": "Apple Account is not selected for the assigned iCloud device",
-      "unknown_icloud_mobapp": "Check the iCloud and Mobile App parameter values (Not found or Invalid)",
-      "unknown_icloud_mobapp_picture": "Check the iCloud, Mobile App and Picture parameter values (Not found or Invalid)",
-      "unknown_icloud_picture": "Check the iCloud and Picture parameter values (Not found or Invalid)",
+      "unknown_icloud_mobapp": "Check the Apple Acct and Mobile App parameter values (Not found or Invalid)",
+      "unknown_icloud_mobapp_picture": "Check the Apple Acct, Mobile App and Picture parameter values (Not found or Invalid)",
+      "unknown_icloud_picture": "Check the Apple Acct and Picture parameter values (Not found or Invalid)",
 
-      "internet_connection_err": "Home Asst is Offline, No Internet Connection is Available",
-      "apple_acct_connection_err": "Internet is available but could not connect to Apple. Try again in a few minutes",
+      "internet_error": "Internet Connection Error > iCloud3 cannot connect to the Internet",
+      "internet_error_no_change": "Internet Connection Error > iCloud3 cannot connect to the Internet. Actions requiring access to the Apple account are not available.",
+      "apple_acct_connection_err": "Internet Error > The Internet is available but iCloud3 could not connect to `apple.com`. Actions requiring access to the Apple account are not available.",
 
       "tfz_selection_invalid": "The value must be a zone that is being tracked from",
       "time_factor_invalid_range": "The 'Travel Time Multiplier' must be between .1 and .9",
@@ -185,7 +188,6 @@
       "menu_0": {
         "title": "Configure Devices & Sensors",
         "data": {
-          "xmenu_items": "⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯",
           "menu_items": "⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯",
           "action_items": "⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯"
         }
@@ -254,7 +256,7 @@
           "server_location": "APPLE SERVER LOCATION - The country hosting this account's Apple Server",
           "totp_key": "TOTP KEY - Time Based One-Time Password Key used to generate the 6-digit authentication code",
           "locate_all": "LOCATE ALL DEVICES (Only applies with multiple Apple Accounts)",
-          "url_suffix_china": "CHINA USERS - Use Apple iCloud Servers located in China (.cn URL suffix)",
+          "url_suffix_china": "CHINA USERS - Use Apple Acct Servers located in China (.cn URL suffix)",
           "action_items": "⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯ ACTION COMMANDS"
         },
         "data_description": {
@@ -298,7 +300,7 @@
         "data": {
           "ic3_devicename": "ICLOUD3 DEVICE_TRACKER ENTITY ID - The HA device_tracker entity for this device. (Example: gary_iphone)",
           "fname": "FRIENDLY NAME - Displayed in HA entities and on the Event Log (Example: Gary-iPhone)",
-          "famshr_devicename": "APPLE ACCOUNT iCLOUD DEVICE  - Apple iCloud device providing location data",
+          "famshr_devicename": "APPLE ACCOUNT DEVICE  - Apple Acct device providing location data",
           "mobile_app_device": "MOBILE APP DEVICE_TRACKER ENTITY - Mobile App device providing location data & zone triggers",
           "picture": "PICTURE - Image of the person normally using this device (44x44 pixels is a good size)",
           "icon": "ICON - Icon to display when the Picture has not been selected (=None)",
@@ -422,7 +424,7 @@
         "title": "Maintenance Tools",
         "description": "Maintenance Tools can be used update the iCloud3 configuration files to correct errors, reset the configuration their default values, reload iCloud3, restart Home Assistant, etc.",
         "data": {
-          "log_level_devices": "RAWDATA LOG DEVICE FILTER - Write iCloud RawData to the log file for only these devices",
+          "log_level_devices": "RAWDATA LOG DEVICE FILTER - Write iCloud AADevData to the log file for only these devices",
           "log_level": "LOG LEVEL - The type of messages that are written to the iCloud3 Log file (icloud3.log}",
           "tools": "⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯ APPLE ACCOUNT TOOLS",
           "action_items": "⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯ TOOLS"
